--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -458,6 +458,7 @@
   --evj-color-font-danger:#FF0000;
   --evj-color-bg-active: #0089FF;
   --evj-color-bg-hover: #1F222E;
+  --evj-color-bg-thumb: rgb(40, 43, 56, 0.46);
 }
 
 $--color-active: #3fa9f5;
